addressing font and svg issues on iphone

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -145,7 +145,7 @@ main {
 h1, h2, h3, h4, h5, h6 {
     font-family : rBold, Arial, sans-serif;
     font-style  : normal;
-    font-weight : normal;
+    font-weight : bold;
     transition  : 1s ease;
 }
 
@@ -703,12 +703,16 @@ footer a {
 
 .hero-h1 {
     font-family : rBoldItalic, sans-serif;
+    font-weight : bold;
+    font-style  : italic;
     font-size   : clamp(1.5rem, 4vmax, 5rem);
 }
 
 .hero-h2 {
     font-family : rBold, sans-serif;
     font-size   : clamp(1rem, 2vmax, 3rem);
+    font-weight : bold;
+    font-style  : normal;
 }
 
 .wave {
